--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 WAIT_FOR_IT_TIMEOUT=60
 
 JUPYTER_ENABLE_LAB=yes
-JUPYTER_USERNAME=jovyan
+JUPYTER_USERNAME=mlflowuser
 JUPYTER_TOKEN=mlflow
 JUPYTER_PORT=8888
 
