--- a/docker/jupyter/Dockerfile
+++ b/docker/jupyter/Dockerfile
@@ -14,7 +14,8 @@ RUN conda install --quiet --yes \
         'conda-build==3.23.1' \
         'tqdm==4.64.1' \
         'jupyter_contrib_nbextensions==0.5.1' \
-        'jupyter_nbextensions_configurator==0.4.1' && \
+        'jupyter_nbextensions_configurator==0.4.1' \
+        'conda install -c r r-irkernel' && \
     conda build purge-all && \
     fix-permissions $CONDA_DIR
 
